# Web-Scraping

./: README.md  pyproject.toml  see.html
web_scraper/: web_scraper.py
